Set up CMake build artifacts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,26 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 project(telepresence_capture)
-
-set(BIN_NAME_DAEMON capture-daemon)
-set(BIN_NAME_WEB capture-web-gui)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_compile_options(-Wall -Wextra -pedantic -Werror)
+add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
+# ==== artifacts config ====
 
-add_subdirectory(apps/daemon)
-add_subdirectory(apps/web)
-add_subdirectory(libs/3d)
-add_subdirectory(libs/camera)
-add_subdirectory(libs/network)
+string(TOUPPER "CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CMAKE_BUILD_TYPE}" OUTPUT_DIRECTORY) # Debug to DEBUG
+set(${OUTPUT_DIRECTORY} ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
 
-add_subdirectory(tests)
+# ==== project libraries and executables ====
+
+add_subdirectory(libs/3d      ${${OUTPUT_DIRECTORY}}/obj/libs/3d)
+add_subdirectory(libs/camera  ${${OUTPUT_DIRECTORY}}/obj/libs/camera)
+add_subdirectory(libs/network ${${OUTPUT_DIRECTORY}}/obj/libs/network)
+
+add_subdirectory(apps/daemon  ${${OUTPUT_DIRECTORY}}/obj/apps/daemon)
+
+message(STATUS "Building tests")
+add_subdirectory(tests        ${${OUTPUT_DIRECTORY}}/obj/tests)
