--- a/libs/network/CMakeLists.txt
+++ b/libs/network/CMakeLists.txt
@@ -1,5 +1,5 @@
 get_filename_component(LIB_PATH "." ABSOLUTE)
-
 file(GLOB_RECURSE LIB_CXX_SOURCES ${LIB_PATH}/*.cpp)
-file(GLOB_RECURSE LIB_HEADERS ${LIB_PATH}/*.h)
+file(GLOB_RECURSE LIB_HEADERS ${LIB_PATH}/*.hpp)
+
 add_library(network STATIC ${LIB_CXX_SOURCES} ${LIB_HEADERS})
