Add GTest library (with clean artifacts)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,19 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
 # ==== artifacts config ====
 
+string(TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE)
 string(TOUPPER "CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CMAKE_BUILD_TYPE}" OUTPUT_DIRECTORY) # Debug to DEBUG
 set(${OUTPUT_DIRECTORY} ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
+
+# ==== external libraries ====
+
+# TODO(laralex): check if Debug project build builds Release externals
+set(VENDOR_BINARY_DIR ${CMAKE_BINARY_DIR}/vendor)
+set(VENDOR_SOURCE_DIR ${CMAKE_SOURCE_DIR}/vendor)
 
 # ==== project libraries and executables ====
 
@@ -24,3 +30,7 @@ add_subdirectory(apps/daemon  ${${OUTPUT_DIRECTORY}}/obj/apps/daemon)
 
 message(STATUS "Building tests")
 add_subdirectory(tests        ${${OUTPUT_DIRECTORY}}/obj/tests)
+
+foreach(KTP_TARGET ${KTP_TARGETS})
+    target_compile_options(${KTP_TARGET} -Wall -Wextra -Wpedantic -Werror)
+endforeach()
