--- a/libs/network/CMakeLists.txt
+++ b/libs/network/CMakeLists.txt
@@ -2,4 +2,5 @@ get_filename_component(LIB_PATH "." ABSOLUTE)
 file(GLOB_RECURSE LIB_CXX_SOURCES ${LIB_PATH}/*.cpp)
 file(GLOB_RECURSE LIB_HEADERS ${LIB_PATH}/*.hpp)
 
-add_library(network STATIC ${LIB_CXX_SOURCES} ${LIB_HEADERS})
+add_library(ktp_network STATIC ${LIB_CXX_SOURCES} ${LIB_HEADERS})
+list(APPEND ${KTP_TARGETS} ktp_network)
