--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = vendor/googletest
 	url = https://github.com/google/googletest.git
 	branch = release-1.10.0
+[submodule "vendor/spdlog"]
+	path = vendor/spdlog
+	url = https://github.com/gabime/spdlog.git
+	branch = v1.8.2
