Add draft `camera` library and draft test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,9 +2,7 @@ include(GoogleTest)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 add_subdirectory(${VENDOR_SOURCE_DIR}/googletest ${VENDOR_BINARY_DIR}/googletest)
 set(gtest_targets gtest gtest_main)
-
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-set(KTP_TESTS_INCLUDES ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ../libs/)
+set(KTP_TESTS_INCLUDES ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ../libs/ ${VENDOR_INCLUDE_DIRS})
 
 macro(create_test_target TESTNAME FILES)
     add_executable(${TESTNAME} ${FILES})
@@ -25,12 +23,12 @@ file(GLOB TEST_SRC_FILES "test_*.cpp")
 enable_testing()
 foreach(TEST_SRC_FILE ${TEST_SRC_FILES})
     get_filename_component(TEST_NAME ${TEST_SRC_FILE} NAME_WE)
-    create_test_target(${TEST_NAME} ${TEST_SRC_FILE} ktp_network)
+    create_test_target(${TEST_NAME} ${TEST_SRC_FILE} ktp_network ktp_camera ${VENDOR_LIBS})
 endforeach()
 
 add_executable(all_tests ${TEST_SRC_FILES})
 target_include_directories(all_tests PRIVATE ${KTP_TESTS_INCLUDES})
-target_link_libraries(all_tests ${gtest_targets} ktp_network)
+target_link_libraries(all_tests ${gtest_targets} ktp_network ktp_camera ${VENDOR_LIBS})
 set_target_properties(all_tests PROPERTIES FOLDER tests)
 list(APPEND ${KTP_TARGETS} all_tests)
 add_test(NAME all_tests COMMAND all_tests)
