--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,9 +1,9 @@
 macro(create_library target_name library_type src_dir)
-    file(GLOB_RECURSE CXX_SOURCES ${src_dir}/*.cpp)
-    file(GLOB_RECURSE CXX_HEADERS ${src_dir}/*.hpp)
+    file(GLOB_RECURSE CXX_SOURCES "${src_dir}/*.cpp")
+    file(GLOB_RECURSE CXX_HEADERS "${src_dir}/*.hpp")
 
-    add_library(${target_name} ${library_type} ${CXX_SOURCES} ${CXX_HEADERS})
-    target_include_directories(${target_name} PRIVATE ${VENDOR_INCLUDE_DIRS})
+    add_library(${target_name} ${library_type} "${CXX_SOURCES}" "${CXX_HEADERS}")
+    target_include_directories(${target_name} PRIVATE "${VENDOR_INCLUDE_DIRS}")
     target_link_libraries(${target_name} ${VENDOR_LIBS})
     list(APPEND ${KTP_LIBRARY_TARGETS} ${target_name})
 endmacro()
