Add nlohmann's json library

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
 	branch = v1.8.2
+[submodule ".\\vendor\\nlohmann_json"]
+	path = .\\vendor\\nlohmann_json
+	url = https://github.com/nlohmann/json.git
